--- a/gui/slick/templates/partials/header.html
+++ b/gui/slick/templates/partials/header.html
@@ -19,12 +19,8 @@
                         <li><a ui-sref="home"><i class="menu-icon-home"></i>&nbsp;Show List</a></li>
                         <li><a ui-sref="addShows"><i class="menu-icon-addshow"></i>&nbsp;Add Shows</a></li>
                         <li><a ui-sref="postprocess"><i class="menu-icon-postprocess"></i>&nbsp;Manual Post-Processing</a></li>
-                        % if sickbeard.SHOWS_RECENT:
-                            <li role="separator" class="divider"></li>
-                            % for recentShow in sickbeard.SHOWS_RECENT:
-                                <li><a href="#/displayShow?showId=${recentShow['indexerid']}"><i class="menu-icon-addshow"></i>&nbsp;${recentShow['name']|trim,h}</a></li>
-                            % endfor
-                        % endif
+                        <li ng-if="recentShows" role="separator" class="divider"></li>
+                        <li ng-repeat="show in recentShows"><a href="{{'#/displayShow?showId=' + show['indexerid']}}"><i class="menu-icon-addshow"></i>&nbsp;{{show.name}}</a></li>
                     </ul>
                     <div style="clear:both;"></div>
                 </li>
