snatchSelection page Removed the scene exception message and H1 anchor's underscore.
Removed sceneExceptionsTooltip.js for displayShow and snatchSelection.mako as it's no longer used for displayShow, I assume there also is no use for it in snatchSelection.mako to keep things consistent.

I've left the id scene_exception_$show.indexerid.. on the a tag, if we want to bring it back some day.

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -922,6 +922,10 @@ h1.title {
     border-bottom: 1px solid #888;
 }
 
+h1.title a {
+    text-decoration: none;
+}
+
 .displayspecials {
     position: relative;
     top: -24px;
