--- a/gui/slick/templates/partials/header.html
+++ b/gui/slick/templates/partials/header.html
@@ -1,7 +1,7 @@
 <nav ng-if="loggedIn" class="navbar navbar-default navbar-fixed-top hidden-print" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main_menu">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -9,20 +9,17 @@
             </button>
             <a class="navbar-brand" ui-sref="home" title="Medusa"><img alt="Medusa" src="images/medusa.png" style="height: 50px;" class="img-responsive pull-left" /></a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="main_menu">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navbar-split dropdown" data-ng-class="{ active: $state.includes('home') }">
-                    <a ui-sref="home" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown"><span>Shows</span>
-                    <b class="caret"></b>
-                    </a>
+                    <a ui-sref="home" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown"><span>Shows</span><b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a ui-sref="home"><i class="menu-icon-home"></i>&nbsp;Show List</a></li>
                         <li><a ui-sref="addShows"><i class="menu-icon-addshow"></i>&nbsp;Add Shows</a></li>
                         <li><a ui-sref="postprocess"><i class="menu-icon-postprocess"></i>&nbsp;Manual Post-Processing</a></li>
-                        <li ng-if="recentShows" role="separator" class="divider"></li>
+                        <li ng-if="recentShows.length" role="separator" class="divider"></li>
                         <li ng-repeat="show in recentShows"><a href="{{'#/displayShow?showId=' + show['indexerid']}}"><i class="menu-icon-addshow"></i>&nbsp;{{show.name}}</a></li>
                     </ul>
-                    <div style="clear:both;"></div>
                 </li>
 
                 <li ui-sref-active>
@@ -42,31 +39,18 @@
                         <li><a ui-sref="manage/backlogOverview"><i class="menu-icon-backlog-view"></i>&nbsp;Backlog Overview</a></li>
                         <li><a ui-sref="manage/manageSearches"><i class="menu-icon-manage-searches"></i>&nbsp;Manage Searches</a></li>
                         <li><a ui-sref="manage/episodeStatuses"><i class="menu-icon-manage2"></i>&nbsp;Episode Status Management</a></li>
-                    <!-- % if sickbeard.USE_PLEX_SERVER and sickbeard.PLEX_SERVER_HOST != "":
-                        <li><a ui-sref="updatePLEX"><i class="menu-icon-plex"></i>&nbsp;Update PLEX</a></li>
-                    % endif
-                    % if sickbeard.USE_KODI and sickbeard.KODI_HOST != "":
-                        <li><a ui-sref="updateKODI"><i class="menu-icon-kodi"></i>&nbsp;Update KODI</a></li>
-                    % endif
-                    % if sickbeard.USE_EMBY and sickbeard.EMBY_HOST != "" and sickbeard.EMBY_APIKEY != "":
-                        <li><a ui-sref="updateEMBY"><i class="menu-icon-emby"></i>&nbsp;Update Emby</a></li>
-                    % endif
-                    % if sickbeard.USE_TORRENTS and sickbeard.TORRENT_METHOD != 'blackhole' and (sickbeard.ENABLE_HTTPS and sickbeard.TORRENT_HOST[:5] == 'https' or not sickbeard.ENABLE_HTTPS and sickbeard.TORRENT_HOST[:5] == 'http:'):
-                        <li><a ui-sref="manage/manageTorrents"><i class="menu-icon-bittorrent"></i>&nbsp;Manage Torrents</a></li>
-                    % endif
-                    % if sickbeard.USE_FAILED_DOWNLOADS:
-                        <li><a ui-sref="manage/failedDownloads"><i class="menu-icon-failed-download"></i>&nbsp;Failed Downloads</a></li>
-                    % endif
-                    % if sickbeard.USE_SUBTITLES:
-                        <li><a ui-sref="manage/subtitleMissed"><i class="menu-icon-backlog"></i>&nbsp;Missed Subtitle Management</a></li>
-                    % endif -->
+                        <li ng-if="settings.usePlexServer && settings.plexServerHost"><a ui-sref="updatePLEX"><i class="menu-icon-plex"></i>&nbsp;Update PLEX</a></li>
+                        <li ng-if="settings.useKodi && settings.kodiHost"><a ui-sref="updateKODI"><i class="menu-icon-kodi"></i>&nbsp;Update KODI</a></li>
+                        <li ng-if="settings.useEmby && settings.embyHost && settings.embyApiKey"><a ui-sref="updateEMBY"><i class="menu-icon-emby"></i>&nbsp;Update Emby</a></li>
+                        <li ng-if="settings.useTorrents && settings.torrentMethod !== 'blackhole' && settings.torrentHost.indexOf(settings.enableHttps ? 'https://' : 'http://') === 0"><a ui-sref="manage/manageTorrents"><i class="menu-icon-bittorrent"></i>&nbsp;Manage Torrents</a></li>
+                        <li ng-if="settings.useFailedDownloads"><a ui-sref="manage/failedDownloads"><i class="menu-icon-failed-download"></i>&nbsp;Failed Downloads</a></li>
+                        <li ng-if="settings.useSubtitles"><a ui-sref="manage/subtitleMissed"><i class="menu-icon-backlog"></i>&nbsp;Missed Subtitle Management</a></li>
                     </ul>
-                    <div style="clear:both;"></div>
                 </li>
 
                 <li class="navbar-split dropdown" data-ng-class="{ active: $state.includes('config') }">
-                    <a ui-sref="config" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown"><span class="visible-xs-inline">Config</span><img src="images/menu/system18.png" class="navbaricon hidden-xs" />
-                    <b class="caret"></b>
+                    <a ui-sref="config" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown">
+                        <span class="visible-xs-inline">Config</span><img src="images/menu/system18.png" class="navbaricon hidden-xs" /><b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a ui-sref="config"><i class="menu-icon-help"></i>&nbsp;Help &amp; Info</a></li>
@@ -79,58 +63,31 @@
                         <li><a ui-sref="config/notifications"><i class="menu-icon-notification"></i>&nbsp;Notifications</a></li>
                         <li><a ui-sref="config/anime"><i class="menu-icon-anime"></i>&nbsp;Anime</a></li>
                     </ul>
-                    <div style="clear:both;"></div>
                 </li>
 
-                <!-- <%
-                    if sickbeard.NEWS_UNREAD:
-                        newsBadge = ' <span class="badge">'+str(sickbeard.NEWS_UNREAD)+'</span>'
-                    else:
-                        newsBadge = ''
-
-                    numCombined = numErrors + numWarnings + sickbeard.NEWS_UNREAD
-                    if numCombined:
-                        if numErrors:
-                            toolsBadgeClass = ' btn-danger'
-                        elif numWarnings:
-                            toolsBadgeClass = ' btn-warning'
-                        else:
-                            toolsBadgeClass = ''
-
-                        toolsBadge = ' <span class="badge'+toolsBadgeClass+'">'+str(numCombined)+'</span>'
-                    else:
-                        toolsBadge = ''
-                %> -->
-                <li id="NAVsystem" class="navbar-split dropdown" data-ng-class="{ active: $state.includes('system') }">
-                    <a href="home/status/" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown"><span class="visible-xs-inline">Tools</span><img src="images/menu/system18-2.png" class="navbaricon hidden-xs" />${toolsBadge}
-                    <b class="caret"></b>
+                <li class="navbar-split dropdown" data-ng-class="{ active: $state.includes('system') }">
+                    <a href="home/status/" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown">
+                        <span class="visible-xs-inline">Tools</span><img src="images/menu/system18-2.png" class="navbaricon hidden-xs" />${toolsBadge}<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="news/"><i class="menu-icon-news"></i>&nbsp;News${newsBadge}</a></li>
                         <li><a href="IRC/"><i class="menu-icon-irc"></i>&nbsp;IRC</a></li>
                         <li><a href="changes/"><i class="menu-icon-changelog"></i>&nbsp;Changelog</a></li>
-                        <li><a href="https://github.com/PyMedusa/SickRage/wiki/Donations" rel="noreferrer" onclick="window.open('${sickbeard.ANON_REDIRECT}' + this.href); return false;"><i class="menu-icon-support"></i>&nbsp;Support Medusa</a></li>
+                        <li><a anon-href="https://github.com/PyMedusa/SickRage/wiki/Donations"><i class="menu-icon-support"></i>&nbsp;Support Medusa</a></li>
                         <li role="separator" class="divider"></li>
-                        <!-- %if numErrors:
-                            <li><a href="errorlogs/"><i class="menu-icon-error"></i>&nbsp;View Errors <span class="badge btn-danger">${numErrors}</span></a></li>
-                        %endif
-                        %if numWarnings:
-                            <li><a href="errorlogs/?level=${sickbeard.logger.WARNING}"><i class="menu-icon-viewlog-errors"></i>&nbsp;View Warnings <span class="badge btn-warning">${numWarnings}</span></a></li>
-                        %endif -->
+                        <li ng-if="errorCounts.errors"><a href="errorlogs/"><i class="menu-icon-error"></i>&nbsp;View Errors <span class="badge btn-danger">{{errorCounts.errors}}</span></a></li>
+                        <li ng-if="errorCounts.warnings"><a href="errorlogs/?level=${sickbeard.logger.WARNING}"><i class="menu-icon-viewlog-errors"></i>&nbsp;View Warnings <span class="badge btn-warning">{{errorCounts.warnings}}</span></a></li>
                         <li><a href="errorlogs/viewlog/"><i class="menu-icon-viewlog"></i>&nbsp;View Log</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="home/updateCheck?pid=${sbPID}"><i class="menu-icon-update"></i>&nbsp;Check For Updates</a></li>
                         <li><a href="home/restart/?pid=${sbPID}" class="confirm restart"><i class="menu-icon-restart"></i>&nbsp;Restart</a></li>
                         <li><a href="home/shutdown/?pid=${sbPID}" class="confirm shutdown"><i class="menu-icon-shutdown"></i>&nbsp;Shutdown</a></li>
-                        <!-- % if srLogin is not True:
-                            <li><a href="logout" class="confirm logout"><i class="menu-icon-shutdown"></i>&nbsp;Logout</a></li>
-                        % endif -->
+                        <li ng-if="loggedIn"><a href="logout" class="confirm logout"><i class="menu-icon-shutdown"></i>&nbsp;Logout</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="home/status/"><i class="menu-icon-info"></i>&nbsp;Server Status</a></li>
                     </ul>
-                    <div style="clear:both;"></div>
                 </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
