Added css classes for provider, size, date, to avoid ugly wrapping

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1255,7 +1255,22 @@ td.col-legend {
 
 th.col-search,
 td.col-search {
-  width: 65px;
+	width: 65px;
+}
+
+td.col-date {
+	min-width: 104px;
+	text-align: center;
+}
+
+td.col-size {
+	min-width: 79px;
+	text-align: center;
+}
+
+td.col-provider {
+	min-width: 133px;
+	text-align: center;
 }
 
 .showLegend {
