--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1261,16 +1261,19 @@ td.col-search {
 td.col-date {
 	min-width: 104px;
 	text-align: center;
+	white-space: nowrap;
 }
 
 td.col-size {
 	min-width: 79px;
 	text-align: center;
+	white-space: nowrap;
 }
 
 td.col-provider {
 	min-width: 133px;
 	text-align: center;
+	white-space: nowrap;
 }
 
 .showLegend {
