--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1276,6 +1276,11 @@ td.col-provider {
 	white-space: nowrap;
 }
 
+td.col-group {
+	min-width: 90px;
+	text-align: center;
+}
+
 .showLegend {
     padding-right: 6px;
     padding-bottom: 1px;
