--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1494,6 +1494,8 @@ h2.day, h2.network {
     text-align:center
 }
 
+a.forceUpdate { text-decoration: none;}
+
 /* =======================================================================
 config*.mako
 ========================================================================== */
@@ -3467,3 +3469,4 @@ snatchSelection.mako
 div#searchNotification {
 	display: inline-block;
 }
+
