--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -3471,3 +3471,27 @@ div#searchNotification {
 .summaryTable tr td {
     word-break: break-all;
 }
+
+
+/* =======================================================================
+viewLog.mako
+========================================================================== */
+
+/* Pull left in mobile resolutions */
+@media (max-width: 767px) {
+    .pull-xs-right {
+        float: right !important;
+    }
+    .pull-xs-left {
+        float: left !important;
+    }
+
+    .radio-inline.pull-xs-left  + .radio-inline.pull-xs-left ,
+    .checkbox-inline.pull-xs-left  + .checkbox-inline.pull-xs-left  {
+        margin-left: 0;
+    }
+    .radio-inline.pull-xs-left, .checkbox-inline.pull-xs-left{
+        margin-right: 10px;
+    }
+}
+
