Added is_anime attribute to recommended shows and template
* Added anidb.net inline images
* Fixed trakt not passing on params as kwargs
* Added ids attribute to recommended_show class. This can be used to keep a dict of indexer/provider id's.
* Copied over latest version simpleanidb lib. Will rebase later.
* in style.css: renamed trakt to recommended, as it's not used solely for trakt anymore.
* Added the anime check to imdb and disabled it again. Cause it does uses resources and IMDB lists, don't have many anime shows.

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -860,31 +860,37 @@ ul#rootDirStaticList li input[type="checkbox"] {
 home_trendingShows.mako
 ========================================================================== */
 
-.traktShowTitleIcons {
+.recommendedShowTitleIcons {
     float: right;
     padding-right: 4px;
     padding-bottom: 4px;
 }
 
-.traktContainer p {
+.recommendedContainer p {
     padding-top: 2px;
 }
 
-.traktContainer p img {
+.recommendedContainer p img {
     position: relative;
     top: -2px;
 }
 
-.traktContainer p, .traktContainer i {
+.recommendedContainer .recommended-image img {
+	left: -4px;
+    position: relative;
+}
+
+.recommendedContainer p, .recommendedContainer i, .recommendedContainer a {
     white-space: nowrap;
     font-size: 12px;
     overflow: hidden;
 /*	text-shadow: 1px 1px 0px #000;*/
     padding-left: 4px;
     margin: 0;
+    text-decoration: none;
 }
 
-.traktContainer {
+.recommendedContainer {
     margin: 12px;
     width: 188px;
     background-color: rgb(223, 218, 207);
@@ -892,12 +898,21 @@ home_trendingShows.mako
     border-radius: 6px;
 }
 
-.trakt-image {
+.recommended-image {
     height: 273px;
     width: 186px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom: 1px solid rgb(17, 17, 17);
+}
+
+.recommendedContainer .anidb-url {
+	float: right;
+	padding-right: 4px;
+}
+
+.anidb-inline {
+	height: 16px;
 }
 
 /* =======================================================================
@@ -3306,7 +3321,7 @@ span.token-input-delete-token {
 .nextline-block {display:block;
 }
 
-.trakt-image {
+.recommended-image {
     display: block;
     z-index: 0;
     background-image: url(/images/poster-dark.jpg);
