Make it visible when shows have already been added. Already added shows, are greyed out
* imdb button should also change to 'in list' for already added shows
* Change when a show has been added button label 'being added' to 'added'. Prevents it from being wrapped to new line.
* Add from recommended -> Add Recommended Shows
* Changed the options label text to: Recommended shows will be added using your default options. Use this option if you want to change the options for that show.
* Added unicode_literals for the recommended providers
* Fixed the exception messages using format()
* anidb id -> tvdbid is now also done through simpleanidb, instead of adba
* Trakt checks if it's an anime, but only when language or country is 'jp'. This is the only information from trakt, which can be used, to check if the show might be an anime. Performing the is_anime check for each trakt show, cost allot of resources.
* Fixed #votes when these are returned with a comma separator for decimals, as for imdb watchlists.

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -612,6 +612,10 @@ span.show-option {
     margin: 4px 4px 0 4px;
 }
 
+.show-attributes {
+	margin: 4px 4px 0px 4px;
+}
+
 .show-title:after {
     content: "";
     pointer-events: none;
@@ -875,9 +879,19 @@ home_trendingShows.mako
     top: -2px;
 }
 
-.recommendedContainer .recommended-image img {
+.recommendedContainer {
 	left: -4px;
     position: relative;
+}
+
+div.recommended-image {
+	background-color: #DFDACF;
+}
+
+.show-in-list {
+	-webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    opacity: 0.8;
 }
 
 .recommendedContainer p, .recommendedContainer i, .recommendedContainer a {
@@ -885,7 +899,6 @@ home_trendingShows.mako
     font-size: 12px;
     overflow: hidden;
 /*	text-shadow: 1px 1px 0px #000;*/
-    padding-left: 4px;
     margin: 0;
     text-decoration: none;
 }
@@ -914,6 +927,13 @@ home_trendingShows.mako
 .anidb-inline {
 	height: 16px;
 }
+
+.recommendedContainer .default-poster {
+    display: block;
+    z-index: 0;
+    background-image: url(/images/poster-dark.jpg)
+}
+
 
 /* =======================================================================
 home_postprocess.mako
@@ -3321,12 +3341,7 @@ span.token-input-delete-token {
 .nextline-block {display:block;
 }
 
-.recommended-image {
-    display: block;
-    z-index: 0;
     background-image: url(/images/poster-dark.jpg);
-}
-
 /* =======================================================================
 jquery.confirm.css
 ========================================================================== */
