--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1026,7 +1026,6 @@ ul.tags li a{
     height: 250px;
     overflow: auto;
     cursor: default;
-    opacity: 0.8;
 }
 
 .summaryTable {
@@ -1136,12 +1135,11 @@ span.snatched b {
 
 .displayShowTable.display_show {
     clear:both;
-    opacity: 0.8;
 }
 
 .displayShowTable th.row-seasonheader {
     border: none !important;
-    background-color: transparent;
+    background-color: #222 !important;
     color: #fff !important;
     padding-top: 15px !important;
     text-align: left !important;
@@ -1149,6 +1147,43 @@ span.snatched b {
 
 .displayShowTable td.col-search {
     text-align: center;
+}
+
+
+.displayShowTableFanArt {
+    table-layout: auto;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    text-align: center;
+    border: none;
+    empty-cells: show;
+    color: #000 !important;
+}
+
+.displayShowTableFanArt.display_show {
+    clear:both;
+    opacity: 0.8;
+}
+
+.displayShowTableFanArt th.row-seasonheader {
+    border: none !important;
+    background-color: transparent !important;
+    color: #fff !important;
+    padding-top: 15px !important;
+    text-align: left !important;
+}
+
+.displayShowTableFanArt td.col-search {
+    text-align: center;
+}
+
+.summaryFanArt {
+   opacity: 0.8 !important; 
+}
+
+.tablesorterFanArt {
+    background-color: transparent !important;
 }
 
 .sickbeardTable {
