Add footers to season tables
Add footers to season tables with information for each season.

* Num of episodes downloaded
* Total size of files for season
* fix first displayed season "HIDE" episodes button

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1275,6 +1275,10 @@ td.col-name {
     text-align: left;
 }
 
+th.col-footer {
+    text-align: left !important;
+}
+
 th.col-subtitles,
 td.col-subtitles {
     width: 150px;
